--- a/Umbraco.Site/package.json
+++ b/Umbraco.Site/package.json
@@ -2,10 +2,25 @@
   "name": "Umbraco-Core-setup",
   "version": "0.1.0",
   "devDependencies": {
+    "browser-sync": "^2.15.0",
+    "del": "^2.2.2",
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
+    "gulp-watch": "^4.3.9",
+    "run-sequence": "^1.2.2",
+    "sassdoc": "^2.1.20"
   }
 }
